buttons page link added. minigame page fix (not showing).

--- a/davai_davai_davai/src/css/index.css
+++ b/davai_davai_davai/src/css/index.css
@@ -18,6 +18,10 @@ button {
   color: white;
 }
 
+a {
+  text-decoration: none;
+}
+
 #root {
   height: 100vh;
   width: 100vw;
